--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ button:hover {
 #advertisement {
     display: none;
     position: fixed;
+    text-align: center;
     top: 0;
     left: 0;
     width: 100%;
